# flask

./: .platform.app.yaml  pyproject.toml
flask-mariadb/: .environment  .platform.app.yaml  connect.sh  pyproject.toml  run.py
flask-mariadb/app/: __init__.py
flask-mariadb/app/config/: Database.py
flask-mariadb/app/controller/: CollegerController.py  CoursesController.py  Main.py  TakeCourseController.py
flaskr/: __init__.py  blog.py
